Some text changes

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -14,7 +14,7 @@ block content
 			p
 				a(href='/keystone').btn.btn-lg.btn-primary Open the Admin UI
 		else
-			p We have created a default Admin user for you with the email <strong>ssadigh@umail.ucsb.edu</strong> and the password <strong>Lol12345!</strong>.
+			p We have created a default Admin user for you with the email <strong></strong> and the password <strong></strong>.
 			p
 				a(href='/keystone/signin', style='margin-right: 10px').btn.btn-lg.btn-primary Sign in
 				|  to use the Admin UI.
