Made some basic layout changes

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -1,7 +1,7 @@
 extends ../layouts/default
 
 block content
-	.container: .jumbotron
+	.fluid-container: .jumbotron
 		img(src='/images/logo.svg', width='160')
 		h1 Welcome
 		p This is your new <a href='http://keystonejs.com', target='_blank'>KeystoneJS</a> website.
