--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -2,11 +2,35 @@
 	margin-top: 0px;
 }
 
+.navbar-default {
+	margin-bottom: 0px;
+}
+
+.hero {
+	background-image: url(../images/stockphoto.jpg);
+	padding-top: 150px;
+	padding-bottom: 150px;
+	padding-right: 100px;
+	padding-left: 100px;
+}
+
+.hero-content {
+	color:white;
+	font-size:125%;
+}
+
+.main-content {
+	background: linear-gradient(orange, white);
+	padding-top: 300px;
+	padding-bottom: 300px;
+}
+
 #footer {
 	margin-top: 30px;
 	border-top: 1px solid @gray-lighter;
-	padding-top: 30px;
+	padding-top: 15px;
 	color: @gray-light;
+	text-align: center;
 }
 
 .gallery-image img {
