--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -50,7 +50,8 @@ html
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						a.navbar-brand(href='/') BRAIN INITIATIVE @ UCSB
+						a.navbar-brand(href='/') 
+							strong BRAIN INITIATIVE @ UCSB
 					.collapse.navbar-collapse
 						ul.nav.navbar-nav.navbar-right
 							each link in navLinks
@@ -85,7 +86,7 @@ html
 		.container: #footer
 
 			//- You don't _have_ to include a link saying your site is powered by KeystoneJS, but we appreciate it!
-			//p Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
+			p Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
 
 
 		//- JAVASCRIPT
