Front page usable

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -20,13 +20,39 @@
 }
 
 .main-content {
-	background: linear-gradient(orange, white);
-	padding-top: 300px;
-	padding-bottom: 300px;
+	background: linear-gradient(#FFAB00, #FFF3D8);
+	padding-bottom: 30px;
 }
 
-#footer {
-	margin-top: 30px;
+.content-title {
+	font-size: 200%;
+	color: white;
+	text-decoration: underline;
+	text-align: center;
+	padding-top: 15px;
+}
+
+.content-text-small {
+	text-align:center;
+	color:white;
+	padding-top: 15px;
+}
+
+.content-text-apply {
+	text-align:center;
+	padding-top: 30px;
+	line-height: 1.3ems;
+}
+
+.content-text-big {
+	font-size: 150%;
+	text-align:center;
+	color:white;
+	padding-top: 15px;
+	line-height: 1.5ems;
+}
+
+#footer {	
 	border-top: 1px solid @gray-lighter;
 	padding-top: 15px;
 	color: @gray-light;
