--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -8,3 +8,17 @@ block content
 					| that will enable researchers to produce dynamic pictures of the brain that show how
 					| individual brain cells and complex neural circuits interact at the speed of thought.
 	.main-content
+		.content-title
+			strong Three Faculty Positions in Neuroscience & Neuroengineering at UCSB
+		.content-text-small The University of California Santa Barbara is hiring three faculty in various areas of
+			|	neuroscience & neuroengineering. We will be hiring faculty members committed to
+			|	interdisciplinary, collaborative research that is visionary and will transform neuroscience.
+		.content-text-big 
+			p Assistant Professor in the Department of Psychological & Brain Sciences
+			p Assistant Professor in the College of Letters & Science
+			p Full, Associate, or Assistant Professor for The College of Engineering
+		.content-text-small (Positions in the Colleges of Engineering and Letters & Sciences will 
+			|	be determined based on the applicant’s research area.)
+		.content-text-apply
+			a.button(type="button" class="btn btn-default btn-lg" href='/contact') Apply Now
+			p Questions can be emailed to queenan@brain.ucsb.edu
