Added some details

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -20,7 +20,7 @@
 }
 
 .main-content {
-	background: linear-gradient(#FFAB00, #FFF3D8);
+	background: linear-gradient(#ff9a00, #ffeab9);
 	padding-bottom: 30px;
 }
 
