--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -86,7 +86,9 @@ html
 		.container: #footer
 
 			//- You don't _have_ to include a link saying your site is powered by KeystoneJS, but we appreciate it!
-			p Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
+			p Located at <a href = https://www.google.com/maps/dir//34.4131924,-119.8422001/@34.4126293,-119.8423348,17.21z target="_blank">Bren Hall, Isla Vista, CA, United States</a>
+			p Website under construction!
+			// Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
 
 
 		//- JAVASCRIPT
