--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -21,4 +21,4 @@ block content
 			|	be determined based on the applicant’s research area.)
 		.content-text-apply
 			a.button(type="button" class="btn btn-default btn-lg" href='/contact') Apply Now
-			p Questions can be emailed to queenan@brain.ucsb.edu
+		.content-text-small Questions can be emailed to queenan@brain.ucsb.edu
