Added some links

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -21,7 +21,7 @@
 
 .main-content {
 	background: linear-gradient(#ff9a00, #ffeab9);
-	padding-bottom: 30px;
+	padding-bottom: 20px;
 }
 
 .content-title {
@@ -35,6 +35,11 @@
 .content-text-small {
 	text-align:center;
 	color:white;
+	padding-top: 15px;
+}
+
+.content-text-small-black {
+	text-align:center;
 	padding-top: 15px;
 }
 
