Some more format changes

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -14,6 +14,16 @@
 	padding-left: 100px;
 }
 
+#ucsb {
+	color: gold;
+	float: right;
+}
+
+#header-title {
+	float: left;
+	font-weight: bold;
+}
+
 .hero-content {
 	color:white;
 	font-size:125%;
@@ -52,7 +62,7 @@
 .content-text-big {
 	font-size: 150%;
 	text-align:center;
-	color:white;
+	color:grey;
 	padding-top: 15px;
 	line-height: 1.5ems;
 }
