--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -51,7 +51,8 @@ html
 							span.icon-bar
 							span.icon-bar
 						a.navbar-brand(href='/') 
-							strong BRAIN INITIATIVE @ UCSB
+							#header-title BRAIN INITIATIVE@
+								#ucsb UCSB
 					.collapse.navbar-collapse
 						ul.nav.navbar-nav.navbar-right
 							each link in navLinks
