--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -20,6 +20,6 @@ block content
 		.content-text-small (Positions in the Colleges of Engineering and Letters & Sciences will 
 			|	be determined based on the applicant’s research area.)
 		.content-text-apply
-			a.button(type="button" class="btn btn-default btn-lg" href='/contact') Apply Now
+			a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
 		.content-text-small-black Questions can be emailed to queenan@brain.ucsb.edu
 			p	Learn more at <a href="https://www.whitehouse.gov/BRAIN" target="_blank">Whitehouse.gov</a>.
