--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -35,6 +35,8 @@
 }
 
 .content-title {
+	padding-right: 15px;
+	padding-left: 15px;
 	font-size: 200%;
 	color: white;
 	text-decoration: underline;
@@ -43,12 +45,16 @@
 }
 
 .content-text-small {
+	padding-right: 15px;
+	padding-left: 15px;
 	text-align:center;
 	color:white;
 	padding-top: 15px;
 }
 
 .content-text-small-black {
+	padding-right: 15px;
+	padding-left: 15px;
 	text-align:center;
 	padding-top: 15px;
 }
@@ -60,6 +66,8 @@
 }
 
 .content-text-big {
+	padding-right: 15px;
+	padding-left: 15px;
 	font-size: 150%;
 	text-align:center;
 	color:grey;
