--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -11,8 +11,9 @@ block content
 		.content-title
 			strong Three Faculty Positions in Neuroscience & Neuroengineering at UCSB
 		.content-text-small The University of California Santa Barbara is hiring three faculty in various areas of
-			|	neuroscience & neuroengineering. We will be hiring faculty members committed to
-			|	interdisciplinary, collaborative research that is visionary and will transform neuroscience.
+			|	neuroscience & neuroengineering. 
+			p	We will be hiring faculty members committed to interdisciplinary, collaborative research that is visionary 
+				|	and will transform neuroscience.
 		.content-text-big 
 			p Assistant Professor in the Department of Psychological & Brain Sciences
 			p Assistant Professor in the College of Letters & Science
