Changed fonts to black

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -27,6 +27,7 @@
 .hero-content {
 	color:white;
 	font-size:125%;
+	text-shadow: 2px 2px 4px #000000;
 }
 
 .main-content {
@@ -38,8 +39,6 @@
 	padding-right: 15px;
 	padding-left: 15px;
 	font-size: 200%;
-	color: white;
-	text-decoration: underline;
 	text-align: center;
 	padding-top: 15px;
 }
@@ -48,7 +47,6 @@
 	padding-right: 15px;
 	padding-left: 15px;
 	text-align:center;
-	color:white;
 	padding-top: 15px;
 }
 
