--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -2,6 +2,16 @@
 	margin-top: 0px;
 }
 
+#body {
+	background: grey;
+}
+
+#inner-container {
+	max-width: 1366px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .navbar-default {
 	margin-bottom: 0px;
 }
