--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -7,7 +7,7 @@
 }
 
 #inner-container {
-	max-width: 1366px;
+	max-width: 1600px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -37,7 +37,7 @@
 .hero-content {
 	color:white;
 	font-size:125%;
-	text-shadow: 2px 2px 4px #000000;
+	text-shadow: 2px 2px 2px #000000;
 }
 
 .main-content {
@@ -51,6 +51,8 @@
 	font-size: 200%;
 	text-align: center;
 	padding-top: 15px;
+	text-shadow: 2px 2px 2px #000000;
+	color:white;
 }
 
 .content-text-small {
@@ -78,7 +80,8 @@
 	padding-left: 15px;
 	font-size: 150%;
 	text-align:center;
-	color:grey;
+	text-shadow: 2px 2px 2px #000000;
+	color:white;
 	padding-top: 15px;
 	line-height: 1.5ems;
 }
