Edited image and text

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -16,9 +16,9 @@ block content
 				p	We will be hiring faculty members committed to interdisciplinary, collaborative research that is visionary 
 					|	and will transform neuroscience.
 			.content-text-big 
-				p Assistant Professor in the Department of Psychological & Brain Sciences
-				p Assistant Professor in the College of Letters & Science
-				p Full, Associate, or Assistant Professor for The College of Engineering
+				p <strong>Assistant Professor</strong> in the Department of Psychological & Brain Sciences
+				p <strong>Assistant Professor</strong> in the College of Letters & Science
+				p <strong>Full, Associate, or Assistant Professor</strong> for The College of Engineering
 			.content-text-small (Positions in the Colleges of Engineering and Letters & Sciences will 
 				|	be determined based on the applicant’s research area.)
 			.content-text-apply
