Fixed grey background on contact page

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -1,27 +1,28 @@
 extends ../layouts/default
 
 block content
-	#inner-container
-		.hero
-			.hero-content
-				p(class="text-center") 
-					strong The Brain Initiative will help accelerate the development and application of new technologies
-						| that will enable researchers to produce dynamic pictures of the brain that show how
-						| individual brain cells and complex neural circuits interact at the speed of thought.
-		.main-content
-			.content-title
-				strong Three Faculty Positions in Neuroscience & Neuroengineering at UCSB
-			.content-text-small The University of California Santa Barbara is hiring three faculty in various areas of
-				|	neuroscience & neuroengineering. 
-				p	We will be hiring faculty members committed to interdisciplinary, collaborative research that is visionary 
-					|	and will transform neuroscience.
-			.content-text-big 
-				p <strong>Assistant Professor</strong> in the Department of Psychological & Brain Sciences
-				p <strong>Assistant Professor</strong> in the College of Letters & Science
-				p <strong>Full, Associate, or Assistant Professor</strong> for The College of Engineering
-			.content-text-small (Positions in the Colleges of Engineering and Letters & Sciences will 
-				|	be determined based on the applicant’s research area.)
-			.content-text-apply
-				a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
-			.content-text-small-black Questions can be emailed to queenan@brain.ucsb.edu
-				p	Learn more at <a href="https://www.whitehouse.gov/BRAIN" target="_blank">Whitehouse.gov</a>.
+	#index-body
+		#inner-container
+			.hero
+				.hero-content
+					p(class="text-center") 
+						strong The Brain Initiative will help accelerate the development and application of new technologies
+							| that will enable researchers to produce dynamic pictures of the brain that show how
+							| individual brain cells and complex neural circuits interact at the speed of thought.
+			.main-content
+				.content-title
+					strong Three Faculty Positions in Neuroscience & Neuroengineering at UCSB
+				.content-text-small The University of California Santa Barbara is hiring three faculty in various areas of
+					|	neuroscience & neuroengineering. 
+					p	We will be hiring faculty members committed to interdisciplinary, collaborative research that is visionary 
+						|	and will transform neuroscience.
+				.content-text-big 
+					p <strong>Assistant Professor</strong> in the Department of Psychological & Brain Sciences
+					p <strong>Assistant Professor</strong> in the College of Letters & Science
+					p <strong>Full, Associate, or Assistant Professor</strong> for The College of Engineering
+				.content-text-small (Positions in the Colleges of Engineering and Letters & Sciences will 
+					|	be determined based on the applicant’s research area.)
+				.content-text-apply
+					a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
+				.content-text-small-black Questions can be emailed to queenan@brain.ucsb.edu
+					p	Learn more at <a href="https://www.whitehouse.gov/BRAIN" target="_blank">Whitehouse.gov</a>.
