new styles not determined by mockup

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -51,7 +51,7 @@ html
 							span.icon-bar
 							span.icon-bar
 						a.navbar-brand(href='/') 
-							#header-title BRAIN INITIATIVE@
+							#header-title BRAIN INITIATIVE// 
 								#ucsb UCSB
 					.collapse.navbar-collapse
 						ul.nav.navbar-nav.navbar-right
