--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -17,11 +17,11 @@
 }
 
 .hero {
-	background-image: url(../images/stockphoto.jpg);
-	padding-top: 150px;
+	height: 600px;
 	padding-bottom: 150px;
 	padding-right: 100px;
 	padding-left: 100px;
+	background-color: black;
 }
 
 #ucsb {
@@ -32,17 +32,27 @@
 #header-title {
 	float: left;
 	font-weight: bold;
+	color: black;
+	font-family: Helvetica;
+	font-size: 30px;
+	letter-spacing: 2px;
 }
 
 .hero-content {
-	color:white;
-	font-size:125%;
-	text-shadow: 2px 2px 2px #000000;
+	color: white;
+	font-size: 18px;
+	display: flex;
+	flex-direction: row;
+	bottom: 10%;
+	position: relative;
+	font-family: roboto;
+	letter-spacing: 1px;
 }
 
 .main-content {
-	background: linear-gradient(#ff9a00, #ffeab9);
+	background: white;
 	padding-bottom: 20px;
+	height: auto;
 }
 
 .content-title {
@@ -50,9 +60,9 @@
 	padding-left: 15px;
 	font-size: 200%;
 	text-align: center;
-	padding-top: 15px;
-	text-shadow: 1px 2px 2px #000000;
-	color:white;
+	padding-top: 60px;
+	color: #FFB511;
+	margin-bottom: 1%;
 }
 
 .content-text-small {
@@ -60,13 +70,18 @@
 	padding-left: 15px;
 	text-align:center;
 	padding-top: 15px;
+	font-family: roboto;
+	margin-bottom: 1%;
+	line-height: 26px;
+	font-size: 14px;
 }
 
 .content-text-small-black {
 	padding-right: 15px;
 	padding-left: 15px;
-	text-align:center;
+	text-align: center;
 	padding-top: 15px;
+	font-family: roboto;
 }
 
 .content-text-apply {
@@ -80,10 +95,10 @@
 	padding-left: 15px;
 	font-size: 150%;
 	text-align:center;
-	text-shadow: 1px 1px 1px #000000;
-	color:white;
+	color: black;
 	padding-top: 15px;
 	line-height: 1.5ems;
+	font-family: roboto;
 }
 
 #footer {	
@@ -98,3 +113,51 @@
     max-width: 100%;
     height: auto;
 }
+
+.panel {
+	width: 100%;
+	height: 100%;
+}
+
+.main-title {
+	text-align: center;
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 2%;
+}
+
+.title-header {
+	font-size: 30px;
+	font-weight: bold;
+}
+
+.secondary-content {
+	width: 50%;
+}
+
+video {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+}
+
+.sub-header {
+	text-align: left;
+	color: white;
+	letter-spacing: 2px;
+	font-size: 40px;
+	position: relative;
+	top: 18%;
+	font-weight: bold;
+}
+
+.btn {
+	color: white;
+}
+
+.button {
+	background-color: black;
+}
+
