mp4 name change in html

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -6,8 +6,8 @@ block content
 			.hero
 				p.sub-header INTRO:
 				video(autoplay loop)
-					source(src="../images/Brain.mp4" type="video/mp4")
-					source(src="../images/Brain.ogg" type="video/ogg")
+					source(src="/../images/brain.mp4" type="video/mp4")
+					source(src="/../images/brain.ogg" type="video/ogg")
 				.hero-content
 					p(class="text-center")
 						strong The Brain Initiative will help accelerate the development and application of new technologies
