--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -27,14 +27,15 @@
 #ucsb {
 	color: gold;
 	float: right;
+	font-size: 60px;
 }
 
 #header-title {
 	float: left;
 	font-weight: bold;
-	color: black;
+	color: white;
 	font-family: Helvetica;
-	font-size: 30px;
+	font-size: 60px;
 	letter-spacing: 2px;
 }
 
@@ -47,6 +48,9 @@
 	position: relative;
 	font-family: roboto;
 	letter-spacing: 1px;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .main-content {
@@ -138,19 +142,9 @@
 
 video {
 	width: 100%;
-	height: 100%;
+	height: 600px;
 	display: flex;
 	flex-direction: row;
-}
-
-.sub-header {
-	text-align: left;
-	color: white;
-	letter-spacing: 2px;
-	font-size: 40px;
-	position: relative;
-	top: 18%;
-	font-weight: bold;
 }
 
 .btn {
@@ -160,4 +154,29 @@ video {
 .button {
 	background-color: black;
 }
+
+.text-center {
+	position: relative;
+	bottom: 320px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.navbar-nav {
+	font-size: 18px;
+	margin-right: 10%;
+}
+
+.navbar-static-top {
+	background-color: black;
+}
+
+.navbar {
+	border: none;
+}
+
+.nav-link {
+	color: white;
+}
+
 
