--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -119,8 +119,11 @@
 }
 
 .panel {
-	width: 100%;
-	height: 100%;
+	margin-right: 50px;
+	margin-left: 50px;
+	margin-top: 30px;
+	width: auto;
+	height: auto;
 }
 
 .main-title {
@@ -128,7 +131,9 @@
 	width: 50%;
 	margin-left: auto;
 	margin-right: auto;
+	padding-bottom: 15px;
 	margin-top: 2%;
+	border-bottom: 2px solid @gray-lighter;
 }
 
 .title-header {
@@ -136,8 +141,17 @@
 	font-weight: bold;
 }
 
+.secondary-header {
+	font-size: 20px;
+	font-weight: bold;
+}
+
 .secondary-content {
 	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 20px;
+	padding-bottom: 30px;
 }
 
 video {
@@ -177,6 +191,12 @@ video {
 
 .nav-link {
 	color: white;
+}
+
+.about-banner {
+	background-color: black;
+	width: 700px;
+	height: 200px;
 }
 
 
