--- a/templates/views/about.jade
+++ b/templates/views/about.jade
@@ -4,9 +4,10 @@ block content
 	.panel.panel-default
 		.main-title
 			p(class='title-header') We are the center of UCSB's neuro-revolution. 
-				p We assemble & support research teams to attack the most fundamental problems in brain science. Providing intellectual, technical, and financial resources, we are changing how academic research is done. 
+			p We assemble & support research teams to attack the most fundamental problems in brain science. Providing intellectual, technical, and financial resources, we are changing how academic research is done. 
 		.secondary-content
-			p OUR RESEARCH is meant to change the future. The UCSB Brain Initiative currently sponsors 3 major research teams. Check back soon for the official unveiling.
-			p OUR TEAM spans engineering, neuroscience, physics, computer science, biology, psychology, history, literature, communications, & art. Most of our members are here at UCSB, though we recruit throughout the UC system and the world. Leading the UCSB Brain Initiative are:
-
-			p	Learn more about the National Brain Initiative at <a href="https://www.whitehouse.gov/BRAIN" target="_blank">whitehouse.gov/BRAIN</a>.
+			p(class="secondary-header")	Our research is meant to change the future. 
+			p	The UCSB Brain Initiative currently sponsors 3 major research teams. Check back soon for the official unveiling.
+			p(class="secondary-header")	Our team is all inclusive.
+			p	Our team spans from engineering, neuroscience, physics, and computer science to biology, history, literature, communications, & arts.
+			p(class="secondary-header")	Learn more about the National Brain Initiative at <a href="https://www.whitehouse.gov/BRAIN" target="_blank">whitehouse.gov/BRAIN</a>.
