--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -9,21 +9,27 @@ block content
 						source(src="/../images/brain.ogg" type="video/ogg")
 				.hero-content
 					.text-center
-						#header-title BRAIN INITIATIVE//
-							#ucsb UCSB
+						#header-title BRAIN INITIATIVE // 
+						#ucsb &nbspUCSB
 			.main-content
-				.content-title
-					strong Three Faculty Positions in Neuroscience & Neuroengineering at UCSB
-				.content-text-small The University of California Santa Barbara is hiring three faculty in various areas of
-					|	neuroscience & neuroengineering. 
-					p	We will be hiring faculty members committed to interdisciplinary, collaborative research that is visionary 
-						|	and will transform neuroscience.
-				.content-text-big 
-					p <strong>Assistant Professor</strong> in the Department of Psychological & Brain Sciences
-					p <strong>Assistant Professor</strong> in the College of Letters & Science
-					p <strong>Full, Associate, or Assistant Professor</strong> for The College of Engineering
-				.content-text-small (Positions in the Colleges of Engineering and Letters & Sciences will 
-					|	be determined based on the applicant’s research area.)
-				.content-text-apply
-					a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
-				.content-text-small-black Questions can be emailed to queenan@brain.ucsb.edu
+				aside.description-image
+					img(src="/images/brenhall.jpg" class='image-holder')
+				.content-wrapper
+					.content-title
+						strong UCSB Faculty Positions in Neuroscience & Neuroengineering
+					.content-text-small The University of California Santa Barbara is hiring three faculty in various areas of
+						|	neuroscience & neuroengineering. We will be hiring faculty members committed to interdisciplinary, collaborative research that is visionary and will transform neuroscience.
+					.content-text-big 
+						p <strong>Assistant Professor</strong> - Department of Psychological & Brain Sciences
+						.content-text-apply
+							a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
+						p <strong>Assistant Professor</strong> - College of Letters & Science
+						.content-text-apply
+							a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
+						p <strong>Full, Associate, or Assistant Professor</strong> - The College of Engineering
+					.content-text-small (Positions in the Colleges of Engineering and Letters & Sciences will 
+						|	be determined based on the applicant’s research area.)
+						.content-text-apply
+							a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
+					.content-text-small-black Questions can be emailed to queenan@brain.ucsb.edu
+
