Added basic contact page

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -162,6 +162,12 @@
 	margin-right: auto;
 }
 
+.secondary-content {
+	width: 100%;
+	padding-bottom: 30px;
+	margin-top: 2%;
+}
+
 .about-header {
 	font-weight: bold;
 	font-size: 30px;
@@ -182,11 +188,37 @@
 	font-weight: bold;
 }
 
-.secondary-content {
-	width: 100%;
-	padding-top: 1.2vw;
-	padding-bottom: 30px;
-	margin-top: 2%;
+.contact-header {
+	font-weight: bold;
+	font-size: 30px;
+	color: #FFB511;
+}
+
+.contact-description {
+	margin-bottom: 4%;
+	font-size: 1.4vw;
+}
+
+.contact-link {
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 30px;
+	color: #FFB511;
+	width: 50%;
+	font-weight: bold;
+}
+
+.contact-map-container {
+	display:table;
+}
+
+.contact-address-info {
+	display:table-cell;
+	padding-left: 25px;
+}
+
+#contact-directors {
+	
 }
 
 video {
