--- a/templates/views/about.jade
+++ b/templates/views/about.jade
@@ -14,4 +14,4 @@ block content
 			.secondary-header
 				p.about-header Our team is all inclusive.
 					p.about-description	Our team spans from engineering, neuroscience, physics, and computer science to biology, history, literature, communications, & arts. We assemble & support research teams to attack the most fundamental problems in brain science.
-			p.about-link Learn more about the National Brain Initiative at <a href="https://www.whitehouse.gov/BRAIN" target="_blank">whitehouse.gov/BRAIN</a>
+			//- p.about-link Learn more about the National Brain Initiative at <a href="https://www.whitehouse.gov/BRAIN" target="_blank">whitehouse.gov/BRAIN</a>
