Made About a bit prettier and fixed extra note in index

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -106,7 +106,7 @@
 }
 
 #footer {
-	margin-top: 2%;
+	padding-top: 2%;
 	color: @gray-light;
 	text-align: center;
 }
@@ -217,8 +217,12 @@
 	padding-left: 25px;
 }
 
+#contact-name {
+	color: #FF8C00;
+}
+
 #contact-directors {
-	
+
 }
 
 video {
