--- a/templates/views/contact.jade
+++ b/templates/views/contact.jade
@@ -19,15 +19,15 @@ block content
 									img(src='/images/queenan.jpg')
 							tr
 								td
-									p	Ken Kosik, PhD
+									p(id="contact-name")	<strong>Ken Kosik</strong>, PhD
 									p	Director
 									p	Dr. Kosik is the Harriman Professor of Neuroscience at UCSB. A neurologist, he joined UCSB in 2004 after two decades at Harvard Medical School.
-									p	queenan@brain.ucsb.edu
+									p(style="font-style:italic;")	kosik@lifesci.ucsb.edu
 								td
-									p	Bridget Queenan, PhD
+									p(id="contact-name")	<strong>Bridget Queenan</strong>, PhD
 									p	Associate Director
 									p	Dr. Queenan is a neuroscientist trained at Harvard & Georgetown. She recently joined UCSB from Johns Hopkins University
-									p	kosik@lifesci.ucsb.edu
+									p(style="font-style:italic;")	queenan@brain.ucsb.edu
 			.secondary-header
 				p.contact-header Headquartered at the award-winning Bren Hall, overlooking the Pacific Ocean.
 					p.contact-description	We encourage you to visit our spectacular campus and new office.
@@ -36,4 +36,4 @@ block content
 						p Bren Hall, Isla Vista, CA, United States
 						p Bren 4330 
 						p 1.805.893.2726
-						p BrainInitiativeUCSB@gmail.com
+						p(style="font-style:italic;") BrainInitiativeUCSB@gmail.com
