--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -27,9 +27,9 @@ block content
 						.content-text-apply
 							a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
 						p <strong>Full, Associate, or Assistant Professor</strong> - The College of Engineering
-					.content-text-small (Positions in the Colleges of Engineering and Letters & Sciences will 
-						|	be determined based on the applicant’s research area.)
 						.content-text-apply
 							a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
-					.content-text-small-black Questions can be emailed to queenan@brain.ucsb.edu
+					.content-text-small (Positions in the Colleges of Engineering and Letters & Sciences will 
+						|	be determined based on the applicant’s research area.)
+						p	Questions can be emailed to queenan@brain.ucsb.edu
 
