--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -14,7 +14,8 @@ html
 
 		//- Customise the stylesheet for your site by editing /public/styles/site.less
 		//- All .less files will be automatically compiled and minified in production.
-		link(href="/styles/site.min.css", rel="stylesheet")
+		link(href="/styles/vendor.css", rel="stylesheet")
+		link(href="/styles/site.css", rel="stylesheet")
 
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
