Removed vw sizing in about page, changed ucsb to span, changed header

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -14,25 +14,18 @@
 
 .navbar-nav {
 	font-size: 18px;
-	margin-right: 10%;
+	color:black;
 }
-
-.navbar-static-top {
-	background-color: black;
-}
-
-.navbar {
-	border: none;
-}
-
-.nav-link {
-	color: white;
-}
-
 
 .navbar-default {
 	margin-bottom: 0px;
+	color:black;
 }
+
+.nav {
+	color:black;
+}
+
 
 //////////////////////-HEADER SECTION-//////////////////////
 ///////////////////////////////////////////////////////////
@@ -68,12 +61,8 @@
 	margin-right: auto;
 }
 
-#ucsb {
+.ucsb {
 	color: gold;
-	float: right;
-	font-size: 4vw;
-	font-family: Helvetica;
-	font-weight: bold;
 }
 
 
@@ -86,6 +75,10 @@ video {
 
 //////////////////////-BODY CONTENT-///////////////////////
 //////////////////////////////////////////////////////////
+
+#body {
+	padding-top:50px;
+}
 
 .btn {
 	color: white;
@@ -153,6 +146,13 @@ video {
 	margin-right: auto;
 }
 
+.image-holder {
+	margin-top: 14%;
+	width: 80%;
+	align-content: right;
+	margin-left: 6%;
+}
+
 //////////////////////-ABOUT PAGE-///////////////////////
 ////////////////////////////////////////////////////////
 
@@ -170,7 +170,6 @@ video {
 
 .about-description {
 	margin-bottom: 4%;
-	font-size: 1.4vw;
 }
 
 .about-link {
@@ -186,13 +185,6 @@ video {
 	background-color: black;
 	width: 700px;
 	height: 200px;
-}
-
-.image-holder {
-	margin-top: 14%;
-	width: 80%;
-	align-content: right;
-	margin-left: 6%;
 }
 
 .main-title {
@@ -218,7 +210,7 @@ video {
 }
 
 .secondary-header {
-	font-size: 1.2vw;
+	font-size: 125%;
 	width: 50%;
 	margin-left: auto;
 	margin-right: auto;
@@ -226,7 +218,6 @@ video {
 
 .secondary-content {
 	width: 100%;
-	padding-top: 1.2vw;
 	padding-bottom: 30px;
 	margin-top: 2%;
 }
