--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -43,7 +43,7 @@ html
 			//- Customise your site's navigation by changing the navLinks Array in ./routes/middleware.js
 			//- ... or completely change this header to suit your design.
 
-			div(role="navigation").navbar.navbar-default.navbar-static-top
+			div(role="navigation").navbar.navbar-default.navbar-fixed-top
 				.container-fluid
 					.navbar-header
 						button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
@@ -51,9 +51,10 @@ html
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						a.navbar-brand(href='/') 
+						a.navbar-brand(href='/') Brain Initiative //
+							span.ucsb	UCSB
 					.collapse.navbar-collapse
-						ul.nav.navbar-nav.navbar-right
+						ul.nav.navbar-nav.navbar-left
 							each link in navLinks
 								li(class=(section == link.key ? 'active' : null)): a(href=link.href)= link.label
 						//-	
