--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -10,7 +10,7 @@ block content
 				.hero-content
 					.text-center
 						#header-title BRAIN INITIATIVE // 
-						#ucsb &nbspUCSB
+							span.ucsb UCSB
 			.main-content
 				aside.description-image
 					img(src="/images/brenhall.jpg" class='image-holder')
