Hide bren hall image on mobile

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -148,9 +148,10 @@ video {
 
 .image-holder {
 	margin-top: 14%;
-	width: 80%;
-	align-content: right;
+	width: 300px;
+	float: left;
 	margin-left: 6%;
+	margin-right: 50px;
 }
 
 //////////////////////-ABOUT PAGE-///////////////////////
