--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -12,7 +12,7 @@ block content
 						#header-title BRAIN INITIATIVE // 
 							span.ucsb UCSB
 			.main-content
-				aside.description-image
+				aside.description-image.hidden-sm.hidden-xs
 					img(src="/images/brenhall.jpg" class='image-holder')
 				.content-wrapper
 					.content-title
