--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -22,10 +22,10 @@ block content
 					.content-text-big 
 						p <strong>Assistant Professor</strong> - Department of Psychological & Brain Sciences
 						.content-text-apply
-							a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
+							a.button(type="button" class="btn btn-default btn-lg" href='https://recruit.ap.ucsb.edu/apply/JPF00554') Apply Now
 						p <strong>Assistant Professor</strong> - College of Letters & Science
 						.content-text-apply
-							a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
+							a.button(type="button" class="btn btn-default btn-lg" href='https://recruit.ap.ucsb.edu/apply/JPF00553') Apply Now
 						p <strong>Full, Associate, or Assistant Professor</strong> - The College of Engineering
 						.content-text-apply
 							a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
