Added borders to director images

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -239,6 +239,13 @@ video {
 	letter-spacing: 1px;
 }
 
+.secondary-header img {
+	padding:1px;
+	margin-bottom: 10px;	
+	border:1px solid #010a30;
+	background-color: grey;
+}
+
 //////////////////////-FOOTER-///////////////////////
 ////////////////////////////////////////////////////
 
