--- a/templates/views/about.jade
+++ b/templates/views/about.jade
@@ -24,7 +24,7 @@ block content
 								td
 									img(src='/images/queenan.jpg')
 							tr
-								td
+								td(style="padding-right: 10px;")
 									p(id="contact-name")	<strong>Ken Kosik</strong>, PhD
 									p	Director
 									p	Dr. Kosik is the Harriman Professor of Neuroscience at UCSB. A neurologist, he joined UCSB in 2004 after two decades at Harvard Medical School.
