no real changes

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -136,12 +136,10 @@ video {
 	font-family: roboto;
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
 .main-content {
 	background: white;
 	padding-bottom: 20px;
-=======
+}
 #footer {
 	padding-top: 2%;
 	color: @gray-light;
@@ -159,12 +157,11 @@ video {
 	margin-left: 50px;
 	margin-top: 30px;
 	width: auto;
->>>>>>> 751b8ec42a7ff3b23338d40ecb9a267db0dbc7a1
-=======
+}
+
 .main-content {
 	background: white;
 	padding-bottom: 20px;
->>>>>>> ade66b1e1e340c4fec8f6e57d289259294169585
 	height: auto;
 	padding-left: 15px;
 	width: 100%;
@@ -208,16 +205,11 @@ video {
 	font-weight: bold;
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> ade66b1e1e340c4fec8f6e57d289259294169585
 .about-banner {
 	background-color: black;
 	width: 700px;
 	height: 200px;
-<<<<<<< HEAD
-=======
+}
 .contact-header {
 	font-weight: bold;
 	font-size: 30px;
